Description
affected: ros gcc dbg bootcd 0.4.0, r70487, r71981
Install Winamp 5.666 from rapps
Make sure "UI interface extensions" is selected (to not hide this tickets issue)
Make sure Bentoo skin is selected (this is default) during first startup.
When you start-up Winamp for the first time, it will fail with
| *** Assertion failed: xLeft <= xRight | 
| ***   Source File: ../win32ss/gdi/gdi32/objects/region.c, line 217 | 
CC to thephysicist as he is our GDI guy.
Attachments
Issue Links
- is duplicated by
- 
                    CORE-15321 winamp can't be opened -         
- Resolved
 
-