[0.4.7][WIN32SS] Fix assert with Winamp 5.666 CORE-10774

Fixes CORE-10774 "Winamp asserts upon startup when Bentoo skin is selected"

Reference:
Alexandre Julliard : Ignore empty rectangles in ExtCreateRegion.
https://source.winehq.org/git/wine.git/commitdiff/8ac61c5a1e56d0933de8af69dbb2a1640d13e05d

fix picked from 0.4.12-dev-979-g 2f5c0ee0a9ffc6619ba35ed120e023283fdb1a88